fixed spacing to be defined through CSS

--- a/bundles/runtime/org.eclipse.fx.ui.controls/src/org/eclipse/fx/ui/controls/stage/window.css
+++ b/bundles/runtime/org.eclipse.fx.ui.controls/src/org/eclipse/fx/ui/controls/stage/window.css
@@ -74,6 +74,7 @@
 
 .default-window .window-buttons {
     -fx-padding: 6 0 0 0;
+    -fx-spacing: 3;
 }
 
 .default-window .window-button:pressed {
